<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.kongqw.serialport.ui.SerialPortActivity">
    <!--左边整体布局-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="360dp"
        android:layout_weight="0.3"
        android:background="@color/huise"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/logo" />

        <FrameLayout
            android:id="@+id/fl_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >
            <RelativeLayout
                android:layout_marginTop="23dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/button_yuanjiao_baise"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_centerInParent="true"
                    android:text="@string/text_body"
                    android:textColor="@color/lvseziti" />

            </RelativeLayout>
            <ImageView
                android:layout_width="47px"
                android:layout_height="47px"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/tongzhi" />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_yuanjiao_baise"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/yuer"
                    android:textColor="@color/huiheiseziti" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/jiner"
                    android:textColor="@color/hongse" />
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="@color/huiheiseziti" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/jifen"
                    android:textColor="@color/huiheiseziti" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/jifenshu"
                    android:textColor="@color/hongse" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Recharg_jiner"
                android:textColor="@color/baise"
                android:text="@string/chongzhi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_yuanjiao_lanse"
                />
            <Button
                android:id="@+id/btn_duihuan"
                android:textColor="@color/baise"
                android:text="@string/duihuanliping"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="17dp"
                android:layout_weight="1"
                android:background="@drawable/button_yuanjiao_lanse"
                />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_yuanjiao_baise">

            <ImageView
                android:layout_width="21px"
                android:layout_height="21px"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:src="@drawable/wenduji" />

            <LinearLayout
                android:layout_marginLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:textColor="@color/txt_main"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/wendu" />

                <TextView
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/wendushuju"
                    android:textColor="@color/txt_main" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_yuanjiao_baise">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="21px"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:src="@drawable/shuiliang" />

            <LinearLayout
                android:layout_marginLeft="25dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <TextView
                    android:textColor="@color/txt_main"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/yongshuiliang" />

                <TextView
                    android:layout_marginLeft="5dp"
                    android:gravity="center|left"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/shuiliang"
                    android:textColor="@color/txt_main" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_yuanjiao_baise">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="21px"
                android:layout_height="21px"
                android:layout_marginLeft="6dp"
                android:src="@drawable/shuizhi" />

            <LinearLayout
                android:layout_marginLeft="25dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:id="@+id/linearLayout">

                <TextView
                    android:textColor="@color/txt_main"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/shuizhi" />

            </LinearLayout>

            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/wendushuju"
                android:textColor="@color/txt_main" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_yuanjiao_baise">

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="21px"
                android:layout_height="21px"
                android:layout_marginLeft="6dp"
                android:src="@drawable/shijian" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="25dp"
                    android:gravity="center|left"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/shijian"
                    android:textColor="@color/txt_main" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_guzhangbaoxiu"
                android:textColor="@color/baise"
                android:text="@string/guzhangbaoxiu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_yuanjiao_lanse"
                />
            <Button
                android:id="@+id/kaiguan"
                android:textColor="@color/baise"
                android:text="@string/yongshuikaiguan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="17dp"
                android:layout_weight="1"
                android:background="@drawable/button_yuanjiao_lanse"
                />
        </LinearLayout>

    </LinearLayout>

    <!--右边整体布局-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/p2" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>


</LinearLayout>
