<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="150dp"
        android:layout_height="wrap_content">
    <ImageView
        android:scaleType="fitXY"
        android:src="@drawable/wupin"
        android:layout_width="match_parent"
        android:layout_height="80dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <TextView
                    android:textColor="@color/txt_main"
                    android:text="@string/taochimakebei"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/top_red"
                    android:text="@string/jifenshuliang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="match_parent">
                <TextView

                    android:layout_gravity="center_vertical"
                    android:id="@+id/tv_duihuana"
                    android:gravity="center"
                    android:textColor="@color/lvseziti"
                    android:text="@string/duihuanwenzi"
                    android:background="@drawable/button_yuanjiaokongxin_lanse"
                    android:layout_width="60dp"
                    android:layout_height="30dp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>