<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/click_to_dismiss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/popup_bg"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        >
        <RelativeLayout
            android:id="@+id/popup_anima"
            android:layout_width="470dp"
            android:layout_height="320dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            >
            <RelativeLayout
                android:layout_centerInParent="true"
                android:background="@drawable/button_yuanjiao_baiseda"
                android:layout_width="match_parent"
                android:layout_height="280dp">
                <ImageView
                    android:id="@+id/img_close"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/guanbi"
                    android:layout_width="17dp"
                    android:layout_height="17dp" />
            </RelativeLayout>
            <ImageView
                android:layout_marginTop="2dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/yongshuikaiguan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="22sp"
                    android:textColor="@color/txt_main"
                    android:gravity="center"
                    android:text="@string/yongshuikaiguan"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <com.suke.widget.SwitchButton
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/switch_button"
                    android:layout_width="90dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:textColor="@color/txt_main"
                    android:textSize="22sp"
                    android:gravity="center"
                    android:text="@string/xuanzshuiwen"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">
                    <TextView
                        android:id="@+id/tv_wushi"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:background="@drawable/button_yuanjiao_lanse"
                        android:textColor="@color/white"
                        android:text="@string/wendushuiju"
                        android:layout_marginLeft="70dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_height="40dp" />
                    <TextView
                        android:id="@+id/tv_yibai"
                        android:gravity="center"
                        android:textColor="@color/lvseziti"
                        android:text="@string/liushi"
                        android:background="@drawable/button_yuanjiaokongxin_lanse"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_height="40dp" />
                    <TextView
                        android:id="@+id/liangbai"
                        android:textColor="@color/lvseziti"
                        android:text="@string/jiushi"
                        android:gravity="center"
                        android:background="@drawable/button_yuanjiaokongxin_lanse"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="70dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.8"
                        android:layout_height="40dp" />
                </LinearLayout>



            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>